k8s/jaeger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 16686
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
spec:
  selector:
    app: jaeger
  ports:
    - name: compact-thrift
      protocol: UDP
      port: 6831
      targetPort: 6831
    - name: binary-thrift
      protocol: UDP
      port: 6832
      targetPort: 6832
    - name: metrics-http
      protocol: TCP
      port: 14269
      targetPort: 14269
    - name: http
      protocol: TCP
      port: 16686
      targetPort: 16686
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-ui-service
spec:
  type: LoadBalancer
  selector:
    app: jaeger
  ports:
    - protocol: TCP
      port: 16686
      targetPort: 16686
      nodePort: 30002
