k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:3.6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-initial-data
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: mongo-initial-data
          configMap:
            name: mongodb-configmap
            items:
              - key: before.js
                path: before.js
              - key: users.js
                path: users.js
              - key: cases.js
                path: cases.js
              - key: labels.js
                path: labels.js

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
